--- a/Css/main.css
+++ b/Css/main.css
@@ -1,26 +1,16 @@
-body {
-  background-color: #f08800;
-}
-
+/** .contenedor
+    background-color: $colorBlanco
+    box-shadow: 5px 4px 9px $colorNegro
+    @include border-radius(8px)
+    height: 5em
+    &:hover
+        background-color: $colorGris
+    p
+        padding-top: 1em
+        text-align: center **/
+/** .contenedor2
+    @extend .contenedor **/
 h1 {
-  color: #ffffff;
+  border: 2px solid red;
 }
-
-.contenedor, .contenedor2 {
-  background-color: #ffffff;
-  box-shadow: 5px 4px 9px #000000;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  border-radius: 8px;
-  height: 5em;
-}
-.contenedor:hover, .contenedor2:hover {
-  background-color: #cfcfcf;
-}
-.contenedor p, .contenedor2 p {
-  padding-top: 1em;
-  text-align: center;
-}
-
 /*# sourceMappingURL=main.css.map */
